--- a/foodie-app/public/index.html
+++ b/foodie-app/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script
+      src="https://kit.fontawesome.com/84347cca93.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Food4Foodie😋</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
